# my-no-sql-server-persistence

./: Cargo.toml  Dockerfile  build.rs  gulpfile.js  package-lock.json
.github/workflows/: release.yml  test.yml
JavaScript/: HtmlDialog.js  HtmlDialog.js.map  HtmlGraph.js.map  HtmlMain.js  HtmlMain.js.map  HtmlStaticElement.js  HtmlStaticElement.js.map  HtmlStatusBar.js  HtmlStatusBar.js.map  HtmlSubscribersGenerator.js  HtmlSubscribersGenerator.js.map  Utils.js.map  main.js  main.js.map
TypeScript/: HtmlDialog.ts  HtmlMain.ts  HtmlStaticElement.ts  HtmlStatusBar.ts  HtmlSubscribersGenerator.ts  contracts.d.ts  main.ts
persist_operations/: mod.rs
persist_operations/blob_content_cache/: blob_content_cache.rs  mod.rs  persisted_table_data.rs
persist_operations/data_initializer/: load_table_files.rs  load_tables.rs  loaded_table_item.rs  mod.rs
persist_operations/data_initializer/load_table/: load_table.rs  load_table_file.rs  mod.rs
persist_operations/data_initializer/load_tasks/: init_state.rs  init_state_data.rs  load_table_task.rs  mod.rs
persist_operations/serializers/: table_attrs.rs
persist_operations/sync/: create_table.rs  delete_partition.rs  delete_table.rs  mod.rs  save_partition.rs  save_table.rs  save_table_attributes.rs  upload_partition.rs
proto/: MyNoSqlServerPersistence.proto
src/: main.rs  settings_reader.rs
src/app/: app_ctx.rs  logs.rs  metrics.rs  mod.rs
src/background/: metrics_updater.rs  mod.rs  persist.rs  presist_process_gc.rs
src/cache_data/: mod.rs  partition_data.rs  row_data.rs  table_cache.rs  table_data_holder.rs  tables.rs
src/db/: data_to_persist.rs  db_instance.rs  db_table_single_threaded_data.rs  db_table_wrapper.rs  mod.rs  persist_markers.rs
src/flows/: flush_to_db_after_import.rs  handle_persist_events.rs  mappers.rs  mod.rs  persist.rs
src/grpc/: grpc_helpers.rs  grpc_persist_process.rs  grpc_service.rs  mod.rs  read_with_timeout.rs  server.rs
src/http/: mod.rs  start_up.rs
src/http/controllers/: as_html.rs  builder.rs  mod.rs
src/http/controllers/api/: api_controller.rs  mod.rs  models.rs
src/http/controllers/home_controller/: index_action.rs
src/http/controllers/logs_controller/: by_process_action.rs  by_table_action.rs  get_fatal_errors_action.rs  home_action.rs  logs.rs  mod.rs
src/http/controllers/prometheus_controller/: metrics_action.rs
src/http/controllers/status_controller/: mod.rs  models.rs  status_bar_model.rs  status_controller.rs
src/http/controllers/status_controller/non_initialized/: mod.rs  model.rs
src/http/mappers/: mod.rs  operation_fail_http_contract.rs
src/init/: start.rs
src/init_legacy/: files_to_upload_list.rs  init_from_archive_state.rs  init_state.rs  mod.rs  start.rs  start_from_archive.rs
src/operations/: get_metrics.rs  mod.rs  persist.rs  shutdown.rs
src/persist_io/: mod.rs  persist_io_operations.rs  table_file.rs
src/persist_io/with_retries/: attempt_handling.rs  create_table.rs  delete_table_file.rs  delete_table_folder.rs  get_list_of_files.rs  get_list_of_tables.rs  load_table_file.rs  mod.rs  save_attributes.rs  save_table_file.rs
src/persist_operations/: delete_partition.rs  delete_rows.rs  grpc_mapper.rs  init_partition.rs  init_table.rs  mod.rs  update_rows.rs  update_table_attrs.rs
src/persist_operations/data_initializer/: load_tables.rs  loaded_table_item.rs  table_list_of_files_loader.rs
src/persist_operations/data_initializer/load_table/: load_table_files.rs  loaded_table.rs
src/persist_operations/data_initializer/load_tasks/: init_state.rs  init_state_data.rs  init_state_snapshot.rs  load_table_task.rs
src/persist_operations/serializers/: db_partition.rs  mod.rs  table_attrs.rs
src/persist_operations/sync/: create_table.rs  delete_partition.rs  delete_table.rs  mod.rs  persisted_table_data.rs  save_partition.rs  save_table.rs  save_table_attributes.rs  upload_partition.rs
src/persist_queue/: mod.rs  persist_event.rs  persist_queue.rs
src/serializers/: db_partition.rs  deserialize_records.rs  mod.rs  table_attrs.rs
src/sqlite/: dto.rs  mod.rs  partitions_repo.rs
wwwroot/js/: app.js
