[package]
name = "my-no-sql-server-persistence"
version = "0.0.21-rc02"
authors = ["amigin <amigin@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

my-azure-storage-sdk = { branch = "0.3.1", git = "https://github.com/MyJetTools/my-azure-storage.git" }
flurl = { branch = "0.2.0", git = "https://github.com/MyJetTools/fl-url" }


rust-extensions = { branch = "0.1.0", git = "https://github.com/MyJetTools/rust-extensions.git" }
my-telemetry = { branch = "0.2.0", git = "https://github.com/MyJetTools/my-telemetry.git" }
my-http-server = { branch = "0.2.5", git = "https://github.com/MyJetTools/my-http-server.git" }
my-http-server-controllers = { branch = "0.2.5", git = "https://github.com/MyJetTools/my-http-server-controllers.git" }
my-http-server-swagger = { branch = "0.2.5", git = "https://github.com/MyJetTools/my-http-server-swagger.git" }
my-logger = { branch = "0.1.2", git = "https://github.com/MyJetTools/my-logger.git" }
my-json = { branch = "0.1.0", git = "https://github.com/MyJetTools/my-json.git" }

my-no-sql-core = { branch = "0.1.1", git = "https://github.com/MyJetTools/my-no-sql-core.git", features = [
    "table_attributes",
    "row_expiration_read_only",
] }


hyper-tls = "*"
tonic = { version = "*", features = ["tls", "tls-roots", "prost"] }
anyhow = "*"
tokio = { version = "*", features = ["full"] }
hyper = { version = "*", features = ["full"] }
prost = "*"
serde = { version = "*", features = ["derive"] }
tokio-util = "*"
futures = "*"
chrono = "*"
futures-util = { version = "*", default-features = false }
futures-core = { version = "*", default-features = false }
futures-channel = "*"
serde_json = "*"
serde_derive = "*"
quick-xml = "*"
lazy_static = "*"
hmac = "*"
sha2 = "*"
base64 = "*"
serde_yaml = "*"
uuid = { version = "*", features = ["serde", "v4"] }
prometheus = "*"
signal-hook = "*"
async-trait = "*"
tokio-stream = "*"


[build-dependencies]
tonic-build = { version = "*", features = ["prost"] }
