[package]
name = "my-no-sql-server-persistence"
version = "0.0.1-rc01"
authors = ["amigin <amigin@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

my-http-server = { tag = "0.7.1", git = "https://github.com/MyJetTools/my-http-server.git", features = [
    "macros",
    "controllers",
    "static-files",
] }

my-no-sql-sdk = { tag = "0.3.2", git = "https://github.com/MyJetTools/my-no-sql-sdk.git", features = [
    "master-node",
    "tcp-contracts",
] }

my-azure-storage-sdk = { tag = "0.5.0", git = "https://github.com/MyJetTools/my-azure-storage.git" }

flurl = { tag = "0.5.3", git = "https://github.com/MyJetTools/fl-url" }

my-sqlite = { tag = "0.1.1", git = "https://github.com/MyJetTools/my-sqlite.git", features = [
    "macros",
] }

rust-extensions = { tag = "0.1.4", git = "https://github.com/MyJetTools/rust-extensions.git", features = [
    "with-tokio",
    "base64",
] }

my-logger = { tag = "1.1.0", git = "https://github.com/MyJetTools/my-logger.git" }
my-json = { tag = "0.2.4", git = "https://github.com/MyJetTools/my-json.git" }
zip = "*"

my-grpc-extensions = { tag = "0.6.2", git = "https://github.com/MyJetTools/my-grpc-extensions.git", features = [
    "grpc-server",
] }


hyper-tls = "*"
tonic = { version = "*", features = ["tls", "tls-roots", "prost"] }
anyhow = "*"
tokio = { version = "*", features = ["full"] }
hyper = { version = "*", features = ["full"] }
prost = "*"
serde = { version = "*", features = ["derive"] }
tokio-util = "*"
futures = "*"
futures-util = { version = "*", default-features = false }
futures-core = { version = "*", default-features = false }
futures-channel = "*"
serde_json = "*"
serde_derive = "*"
quick-xml = "*"
lazy_static = "*"
hmac = "*"
sha2 = "*"
base64 = "*"
serde_yaml = "*"
uuid = { version = "*", features = ["serde", "v4"] }
prometheus = "*"
signal-hook = "*"
async-trait = "*"
tokio-stream = "*"
prost-types = "*"

[build-dependencies]
tonic-build = { version = "*", features = ["prost"] }
